<resources>
    <string name="app_name">RailIndia</string>
    <string name="enter_bogie_number">Enter Bogie Number</string>
    <string name="date">Date</string>
    <string name="of_bogie"># of Bogie (Default is 1)</string>
    <string name="add_data">Add Data</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="please_fill_data_below_and_save">Please fill data below and Save.</string>
    <string name="btn_continue">Continue</string>
    <string name="viewData">View Data</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="go_back_ask">You will lose your changes. Please save your work first.</string>
    <string name="no_internet">Something\'s wrong with internet. Please check your connection</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="search_data">Search Data</string>
    <string name="update_data">Update Data</string>
    <string name="str_export">Export</string>
    <string name="date_available">"You have already entered data for "</string>


    <string name="rationale_storage">This app needs access to your storage so you can download Excel file.</string>
    <string name="rationale_storage_contacts">This app needs access to your storage to download Excel file.</string>
    <string name="returned_from_app_settings_to_activity">
        Returned from app settings to MainActivity with the following permissions: Storage
    </string>
    <string name="storage">Storage</string>
</resources>