<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="showList"
            type="Boolean" />

        <variable
            name="homeViewModel"
            type="com.palak.railindia.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAddData"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".home.HomeFragment">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:elevation="4dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:titleTextColor="@color/white">

                    <TextView
                        android:id="@+id/tvSettingsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.appcompat.widget.Toolbar>

                <include
                    android:id="@+id/layoutDate"
                    layout="@layout/layout_date"
                    bind:homeViewModel="@{homeViewModel}" />

                <include
                    android:id="@+id/layoutBogie"
                    layout="@layout/layout_bogie"
                    bind:homeViewModel="@{homeViewModel}" />

                <Button
                    android:id="@+id/btnContinue"
                    isGone="@{showList}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/btn_continue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutBogie" />


                <Button
                    android:id="@+id/btnViewData"
                    isGone="@{showList}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/viewData"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnContinue" />

                <View
                    android:id="@+id/viewSpace1"
                    isGone="@{!showList}"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="#aaa"
                    app:layout_constraintTop_toBottomOf="@+id/layoutBogie" />

                <TextView
                    android:id="@+id/tvFill"
                    isGone="@{!showList}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/please_fill_data_below_and_save"
                    android:textColor="#888"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewSpace1" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvComponentData"
                    isGone="@{!showList}"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clipToPadding="false"
                    android:paddingTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvFill" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/btnAddData"
            isGone="@{!showList}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/add_data"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nestedScroll" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>